# github-elasticsearch-sync

./: .env.example  .gitignore  LICENSE  README.md  demo.py  pyproject.toml
src/github_elasticsearch_sync/: __init__.py  cli.py  client.py  config.py  elasticsearch_client.py  sync_engine.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py
